--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite --open"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Argemiro dos Anjos",
+  "license": "ISC",
+  "dependencies": {
+    "@trybe/eslint-config-frontend": "^1.11.2",
+    "nanoid": "^4.0.2",
+    "vite": "^4.3.8"
+  },
+  "type": "module"
 }
